src/tests/snapshots/cargo_vet__tests__registry__test_registry_parse_error.snap
---
source: src/tests/registry.rs
expression: human
---
Vetting Failed!

3 unvetted dependencies:
  third-party1:10.0.0 missing ["safe-to-deploy"]
  third-party2:10.0.0 missing ["safe-to-deploy"]
  transitive-third-party1:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    cargo vet inspect third-party1 10.0.0             (used by first-party)   (100 lines)
    cargo vet inspect third-party2 10.0.0             (used by first-party)   (100 lines)
    cargo vet inspect transitive-third-party1 10.0.0  (used by third-party1)  (100 lines)

estimated audit backlog: 300 lines

Use |cargo vet certify| to record the audits.

